EPMRPP-33167: Fix accordeon overflowing grid

--- a/app/src/components/main/grid/grid.scss
+++ b/app/src/components/main/grid/grid.scss
@@ -1,4 +1,5 @@
 .grid {
   display: table;
   width: 100%;
+  position: relative;
 }
